--- a/Makefile_win
+++ b/Makefile_win
@@ -6,27 +6,22 @@
 
 # General settings
 	# See $(GFXLIB)/tools/gmake_scripts/readme.txt for the list of variables
-	OPT_OS					= linux
-	OPT_LINK_OPTIMIZE		= yes
-	# Change this next setting (or add the explicit compiler flags) if you are not compiling for x86 linux
-	OPT_CPU					= x86
+	OPT_OS					= win32
+	OPT_LINK_OPTIMIZE		= no
 
 # uGFX settings
-	# See $(GFXLIB)/tools/gmake_scripts/library_ugfx.mk for the list of variables
 	GFXLIB					= ./ugfx
-	GFXBOARD				= Linux-SDL
+	GFXBOARD				= Win32
 	#GFXDEMO					= modules/gdisp/basics
 
-# Linux settings
-	# See $(GFXLIB)/tools/gmake_scripts/os_linux.mk for the list of variables
 
 ##############################################################################################
 # Set these for your project
 #
 
-ARCH     =
+ARCH     = i686-w64-mingw32-
 SRCFLAGS = -ggdb -O0
-CFLAGS   = `sdl2-config --libs --cflags` -Wfatal-errors
+CFLAGS   = -Wfatal-errors
 CXXFLAGS =
 ASFLAGS  =
 LDFLAGS  =
