adds add can message frame, adjusts title of desktop windows

--- a/Makefile_linux
+++ b/Makefile_linux
@@ -33,8 +33,10 @@ LDFLAGS  =
 
 SRC	 = Src/gwin_table.c
 SRC	 += Src/View/main_view.cpp
+SRC	 += Src/View/add_can_message.cpp
 SRC	 += Src/View/can_view.cpp
 SRC	 += Src/View/tx_can_view.cpp
+SRC	 += Src/View/rx_can_view.cpp
 SRC      += Src/main_desktop.c
 OBJS     =
 DEFS     =
