adds candriver, edit form and timer support

--- a/Makefile_linux
+++ b/Makefile_linux
@@ -27,23 +27,25 @@
 ARCH     =
 SRCFLAGS = -ggdb -O0
 CFLAGS   = `sdl2-config --libs --cflags` -Wfatal-errors
-CXXFLAGS =
+CXXFLAGS =  -Wno-narrowing
 ASFLAGS  =
 LDFLAGS  =
 
-SRC	 = Src/gwin_table.c
+SRC	 = Src/common/notification_helper.cpp
 SRC	 += Src/VirtualKeyBoard/vkeyboard.cpp
 SRC	 += Src/View/main_view.cpp
 SRC	 += Src/View/add_can_message.cpp
+SRC	 += Src/View/edit_can_message.cpp
 SRC	 += Src/View/can_view.cpp
 SRC	 += Src/View/tx_can_view.cpp
 SRC	 += Src/View/rx_can_view.cpp
-SRC	 += Src/emhashmap.c
+SRC	 += Src/common/can_gui_package.cpp
 SRC      += Src/main_desktop.c
 OBJS     =
 DEFS     =
 LIBS     =
 INCPATH  = Inc
+INCPATH  += Inc/images
 INCPATH  += Src/common
 INCPATH += Src/VirtualKeyBoard
 LIBPATH  =
