--- a/Makefile_win
+++ b/Makefile_win
@@ -29,6 +29,7 @@ LDFLAGS  =
 SRC	 = Src/gwin_table.c
 SRC	 += Src/VirtualKeyBoard/vkeyboard.cpp
 SRC	 += Src/View/main_view.cpp
+SRC	 += Src/View/edit_can_message.cpp
 SRC	 += Src/View/add_can_message.cpp
 SRC	 += Src/View/can_view.cpp
 SRC	 += Src/View/tx_can_view.cpp
