deletes keyboard after edit message popup

--- a/Makefile_linux
+++ b/Makefile_linux
@@ -40,7 +40,7 @@ SRC	 += Src/View/can_view.cpp
 SRC	 += Src/View/tx_can_view.cpp
 SRC	 += Src/View/rx_can_view.cpp
 SRC	 += Src/common/can_gui_package.cpp
-SRC      += Src/main_desktop.c
+SRC      += Src/main_desktop.cpp
 OBJS     =
 DEFS     =
 LIBS     =
