--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,19 @@ compile_commands.json
 *.idb
 *.pdb
 
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+armcan
+armcan_flash.ld
 # Kernel Module Compile Results
 *.mod*
 *.cmd
